--- a/src/css/plvylist.css
+++ b/src/css/plvylist.css
@@ -1,43 +1,33 @@
 /* ALL VARIABLES */
 :root {
-  --blue: #0a7ac9;
-  --red: #e53d00;
-  --black: #010101;
-  --white: #f5f5f5;
-  --track-w: 100%;
-  /* need this */
-  --track-h: .25em;
-  /* need this */
-  --thumb-d: 1em;
-  /* need this */
-  --track-c: lightgrey;
-  --fill-c: var(--blue);
-  /* need this */
-  --thumb-c: var(--black);
-  /* need this */
-  --buttonColor: var(--blue);
-  /* need this */
-  --activeColor: var(--blue);
-  /* need this */
-  --activeBG: #eee;
-  /* need this */
-  --mainFont: "Red Hat Text", sans-serif;
-  /* need this */
-  --mainColor: #333;
-  /* need this */
-  --mainBG: var(--white);
-  /* need this */
-  --loopColor: var(--red);
-  /* need this */
+  --plvyBlue: #0a7ac9;
+  --plvyRed: #e53d00;
+  --plvyBlack: #010101;
+  --plvyWhite: #f5f5f5;
+  --plvyTrack-w: 100%;
+  --plvyTrack-h: .25em;
+  --plvyThumb-d: 1em;
+  --plvyTrack-c: lightgrey;
+  --plvyFill-c: var(--plvyBlue);
+  --plvyThumb-c: var(--plvyBlack);
+  --plvyButtonColor: var(--plvyBlue);
+  --plvyActiveColor: var(--plvyBlue);
+  --plvyActiveBG: #eee;
+  --plvyFont: "Red Hat Text", sans-serif;
+  --plvyFontColor: #333;
+  --plvyMainBG: var(--plvyWhite);
+  --plvyLoopColor: var(--plvyRed);
+  --plvyArtShadow: var(--plvyBlack);
+  --plvyResponsiveFont: clamp(0.9113rem, 0.8922rem + 0.0951vw, 0.96rem);
 }
 /* ALL VARIABLES ABOVE */
 /* PLVYLIST BELOW */
 .plvylist {
-  padding: 1rem;
-  font-family: "Red Hat Text", sans-serif;
+  padding: .5rem;
+  font-family: var(--plvyFont);
   font-size: 16px;
-  color: var(--mainColor);
-  background-color: var(--white);
+  color: var(--plvyFontColor);
+  background-color: var(--plvyMainBG);
   width: 100%;
   max-width: 45em;
   margin: auto;
@@ -51,7 +41,7 @@
 }
 
 .plvylist img#artwork {
-  box-shadow: 0 0 5px 1px #0a0a0a;
+  box-shadow: 0 0 5px 1px var(--plvyArtShadow);
 }
 
 .plvylist .plvy--meta {
@@ -63,7 +53,7 @@
 
 .plvylist .plvy--track-info p {
   margin: 0;
-  font-size: var(--step--2);
+  font-size: var(--plvyResponsiveFont);
 }
 
 .plvylist .plvy--controls {
@@ -82,7 +72,7 @@
 }
 
 .plvylist .plvy--controls .controls__primary #loop.loop--active svg {
-  stroke: var(--red);
+  stroke: var(--plvyLoopColor);
 }
 
 .plvylist .plvy--controls .controls__secondary .plvy--volume {
@@ -99,12 +89,12 @@
 }
 
 .plvylist .plvy--controls button svg {
-  stroke: var(--mainColor);
+  stroke: var(--plvyFontColor);
   transition: stroke .1s ease-in-out;
 }
 
 .plvylist .plvy--controls button:hover svg {
-  stroke: var(--blue);
+  stroke: var(--plvyButtonColor);
 }
 
 .plvylist .plvy--seeker {
@@ -119,7 +109,7 @@
 .plvylist .plvy--tracklist #plvy--songs {
   padding-left: 2em;
   line-height: 1.5;
-  font-size: var(--step--2);
+  font-size: var(--plvyResponsiveFont);
 }
 
 .plvylist .plvy--tracklist #plvy--songs .plvy--song {
@@ -127,11 +117,11 @@
 }
 
 .plvylist .plvy--tracklist #plvy--songs .plvy--song:hover {
-  background: #eee;
+  background: var(--plvyActiveBG);
 }
 
 .plvylist .plvy--tracklist #plvy--songs .plvy--song__active {
-  color: var(--blue);
+  color: var(--plvyActiveColor);
 }
 /* ==============
 ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
@@ -139,11 +129,11 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
 .plvylist input[type="range"] {
   --range: calc(var(--max) - var(--min));
   --ratio: calc((var(--val) - var(--min)) / var(--range));
-  --sx: calc(0.5 * 1em + var(--ratio) * (100% - 1em));
+  --sx: calc(0.5 * var(--plvyThumb-d) + var(--ratio) * (100% - var(--plvyThumb-d)));
   margin: 0;
   padding: 0;
-  max-width: 100%;
-  height: .25em;
+  max-width: var(--plvyTrack-w);
+  height: var(--plvyTrack-h);
   background: transparent;
   font: 1em/1 arial, sans-serif;
   display: inline-block;
@@ -166,20 +156,20 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
 
 .plvylist input[type="range"]::-webkit-slider-runnable-track {
   box-sizing: border-box;
-  max-width: 100%;
-  height: .25em;
-  background: var(--track-c);
+  max-width: var(--plvyTrack-w);
+  height: var(--plvyTrack-h);
+  background: var(--plvyTrack-c);
   border-radius: 6px;
   padding-top: 1.5px;
   padding-bottom: 1.5px;
-  background: linear-gradient(var(--blue), var(--blue)) 0/var(--sx) 100% no-repeat var(--track-c);
+  background: linear-gradient(var(--plvyFill-c), var(--plvyFill-c)) 0/var(--sx) 100% no-repeat var(--plvyTrack-c);
 }
 
 .plvylist input[type="range"]::-moz-range-track {
   box-sizing: border-box;
-  max-width: 100%;
-  height: .25em;
-  background: var(--track-c);
+  max-width: var(--plvyTrack-w);
+  height: var(--plvyTrack-h);
+  background: var(--plvyTrack-c);
   border-radius: 6px;
   padding-top: 1.5px;
   padding-bottom: 1.5px;
@@ -187,33 +177,33 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
 
 .plvylist input[type="range"]::-ms-track {
   box-sizing: border-box;
-  max-width: 100%;
-  height: .25em;
-  background: var(--track-c);
+  max-width: var(--plvyTrack-w);
+  height: var(--plvyTrack-h);
+  background: var(--plvyTrack-c);
   border-radius: 6px;
 }
 
 .plvylist input[type="range"]::-moz-range-progress {
-  height: .25em;
-  background: var(--blue);
+  height: var(--plvyTrack-h);
+  background: var(--plvyFill-c);
   border-radius: 6px;
 }
 
 .plvylist input[type="range"]::-webkit-slider-thumb {
   margin-top: -9px;
   box-sizing: border-box;
-  background: var(--black);
-  width: 1em;
-  height: 1em;
+  background: var(--plvyThumb-c);
+  width: var(--plvyThumb-d);
+  height: var(--plvyThumb-d);
   border-radius: 50%;
 }
 
 .plvylist input[type="range"]::-moz-range-thumb {
   border: none;
   box-sizing: border-box;
-  background: var(--black);
-  width: 1em;
-  height: 1em;
+  background: var(--plvyThumb-c);
+  width: var(--plvyThumb-d);
+  height: var(--plvyThumb-d);
   border-radius: 50%;
 }
 
@@ -235,11 +225,11 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
 }
 
 .plvylist input[type="range"]::-ms-fill-lower {
-  background: var(--blue);
+  background: var(--plvyFill-c);
 }
 
 .plvylist input[type="range"]::-ms-fill-upper {
-  background: var(--track-c);
+  background: var(--plvyTrack-c);
 }
 
 .plvylist input[type="range"]::-ms-thumb {
@@ -247,9 +237,9 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
   height: 10px !important;
   width: 10px !important;
   border-radius: 50%;
-  background: var(--black);
+  background: var(--plvyThumb-c);
   cursor: pointer;
-  border: 10px solid var(--black) !important;
+  border: 10px solid var(--plvyThumb-c) !important;
   box-shadow: none !important;
 }
 /* ==============
