--- a/src/sass/plvylist.scss
+++ b/src/sass/plvylist.scss
@@ -1,69 +1,74 @@
 // SASS GLOBALS BLOCK
-$blue: #0a7ac9;
-$red: #e53d00;
-$black: #010101;
-$white: #f5f5f5;
-$track-w: 100%;
-$track-h: 0.25em;
-$thumb-d: 1em;
-$track-c: lightgrey;
-$fill-c: $blue;
-$thumb-c: $black;
-$buttonColor: $blue;
-$activeColor: $blue;
-$activeBG: #eee;
-$mainFont: "Red Hat Text", sans-serif;
-$mainColor: #333;
-$mainBG: $white;
-$loopColor: $red;
+$plvyBlue: #0a7ac9;
+$plvyRed: #e53d00;
+$plvyBlack: #010101;
+$plvyWhite: #f5f5f5;
+$plvyTrack-w: 100%;
+$plvyTrack-h: 0.25em;
+$plvyThumb-d: 1em;
+$plvyTrack-c: lightgrey;
+$plvyFill-c: $plvyBlue;
+$plvyThumb-c: $plvyBlack;
+$plvyButtonColor: $plvyBlue;
+$plvyActiveColor: $plvyBlue;
+$plvyActiveBG: #eee;
+$plvyFont: "Red Hat Text", sans-serif;
+$plvyFontColor: #333;
+$plvyMainBG: $plvyWhite;
+$plvyLoopColor: $plvyRed;
+$plvyArtShadow: $plvyBlack;
 // SASS GLOBALS BLOCK
 
 // SASS MIXINS BLOCK
 @mixin track($fill: 0) {
   box-sizing: border-box;
-  max-width: $track-w;
-  height: $track-h;
-  background: $track-c;
+  max-width: $plvyTrack-w;
+  height: $plvyTrack-h;
+  background: $plvyTrack-c;
   border-radius: 6px;
 
   @if $fill == 1 {
     // .ltFormRange & {
     padding-top: 1.5px;
     padding-bottom: 1.5px;
-    background: linear-gradient($fill-c, $fill-c)
+    background: linear-gradient($plvyFill-c, $plvyFill-c)
       0 /
       var(--sx)
       100%
       no-repeat
-      $track-c;
+      $plvyTrack-c;
     // }
   }
 }
 
 @mixin fill() {
-  height: $track-h;
-  background: $fill-c;
+  height: $plvyTrack-h;
+  background: $plvyFill-c;
   border-radius: 6px;
 }
 
 @mixin thumb() {
   box-sizing: border-box;
-  background: $thumb-c;
-  width: $thumb-d;
-  height: $thumb-d;
+  background: $plvyThumb-c;
+  width: $plvyThumb-d;
+  height: $plvyThumb-d;
   border-radius: 50%;
   // box-shadow: 0 0 0 7px rgba(0, 174, 239, 0.4);
 }
 // SASS MIXINS BLOCK
 
+:root {
+  --plvyResponsiveFont: clamp(0.9113rem, 0.8922rem + 0.0951vw, 0.96rem);
+}
+
 .plvylist {
-  padding: 1rem;
+  padding: 0.5rem;
   font: {
-    family: $mainFont;
+    family: $plvyFont;
     size: 16px; // force the base font size of the component
   }
-  color: $mainColor;
-  background-color: $mainBG;
+  color: $plvyFontColor;
+  background-color: $plvyMainBG;
   width: 100%;
   max-width: 45em;
   margin: auto;
@@ -75,7 +80,7 @@ $loopColor: $red;
     height: auto;
 
     &#artwork {
-      box-shadow: 0 0 5px 1px #0a0a0a;
+      box-shadow: 0 0 5px 1px $plvyArtShadow;
     }
   }
 
@@ -88,7 +93,7 @@ $loopColor: $red;
 
   .plvy--track-info p {
     margin: 0;
-    font-size: var(--step--2);
+    font-size: var(--plvyResponsiveFont);
   }
 
   .plvy--controls {
@@ -105,7 +110,7 @@ $loopColor: $red;
       }
 
       #loop.loop--active svg {
-        stroke: $loopColor;
+        stroke: $plvyLoopColor;
       }
     }
 
@@ -124,12 +129,12 @@ $loopColor: $red;
       transition: background 0.1s ease-in-out;
 
       svg {
-        stroke: #333;
+        stroke: $plvyFontColor;
         transition: stroke 0.1s ease-in-out;
       }
 
       &:hover svg {
-        stroke: $buttonColor;
+        stroke: $plvyButtonColor;
       }
     }
   }
@@ -147,18 +152,18 @@ $loopColor: $red;
     #plvy--songs {
       padding-left: 2em;
       line-height: 1.5;
-      font-size: var(--step--2);
+      font-size: var(--plvyResponsiveFont);
 
       .plvy--song {
         padding: 0 0.5em;
 
         &:hover {
-          background: $activeBG;
+          background: $plvyActiveBG;
         }
       }
 
       .plvy--song__active {
-        color: $activeColor;
+        color: $plvyActiveColor;
       }
     }
   }
@@ -182,11 +187,11 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
 
   --range: calc(var(--max) - var(--min));
   --ratio: calc((var(--val) - var(--min)) / var(--range));
-  --sx: calc(0.5 * #{$thumb-d} + var(--ratio) * (100% - #{$thumb-d}));
+  --sx: calc(0.5 * #{$plvyThumb-d} + var(--ratio) * (100% - #{$plvyThumb-d}));
   margin: 0;
   padding: 0;
-  max-width: $track-w;
-  height: $track-h;
+  max-width: $plvyTrack-w;
+  height: $plvyTrack-h;
   background: transparent;
   font: 1em/1 arial, sans-serif;
 
@@ -240,19 +245,19 @@ ALL THE STYLES FOR THE SLIDER INPUTS BELOW HERE
   display: none;
 }
 .plvylist input[type="range"]::-ms-fill-lower {
-  background: $fill-c;
+  background: $plvyFill-c;
 }
 .plvylist input[type="range"]::-ms-fill-upper {
-  background: $track-c;
+  background: $plvyTrack-c;
 }
 .plvylist input[type="range"]::-ms-thumb {
   margin-top: 1px !important;
   height: 10px !important;
   width: 10px !important;
   border-radius: 50%;
-  background: $thumb-c;
+  background: $plvyThumb-c;
   cursor: pointer;
-  border: 10px solid $thumb-c !important;
+  border: 10px solid $plvyThumb-c !important;
   box-shadow: none !important;
 }
 /* ==============
