--- a/src/plvy.scss
+++ b/src/plvy.scss
@@ -1,63 +1,62 @@
 .plvylist {
-    --accent: dodgerblue;
-    --changed: crimson;
-    --contrast-1: hsl(0, 0%, 50%);
-    --contrast-2: hsl(0, 0%, 70%, .3);
-    accent-color: var(--accent);
-    font-family: inherit;
-    margin: auto;
-    width: 100%;
+  --accent: dodgerblue;
+  --changed: crimson;
+  --contrast-1: hsl(0, 0%, 50%);
+  --contrast-2: hsl(0, 0%, 70%, 0.3);
+  accent-color: var(--accent);
+  font-family: inherit;
+  inline-size: 100%;
+  margin: auto;
 }
 
 img#artwork {
-    box-shadow: 0 0 5px 1px var(--contrast-1);
-    height: auto;
-    max-width: 100%;
+  block-size: auto;
+  max-inline-size: 100%;
 }
 
 .meta {
-    align-items: flex-end;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
+  align-items: flex-end;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1em;
 }
 
 .track-info p:not(:last-of-type) {
-    margin-block-end: .5rem;
-    margin-block-start: 0;
+  margin-block-end: 0.5rem;
+  margin-block-start: 0;
 }
 
 #fwd {
-    margin-inline-end: auto;
+  margin-inline-end: auto;
 }
 
 #loop.loop--active svg {
-    stroke: var(--changed);
+  stroke: var(--changed);
 }
 
 .seeker {
-    margin-block-end: 1rem;
-    margin-block-start: 1rem;
+  margin-block-end: 1rem;
+  margin-block-start: 1rem;
 }
 
 .volume {
-    display: inline-flex;
+  display: inline-flex;
 }
 
 :is(.controls, .song) button {
-    background: none;
-    border: none;
-    color: inherit;
-    cursor: pointer;
-    font: inherit;
-    stroke: currentColor;
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  stroke: currentColor;
 }
 
 .controls {
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   button:hover svg {
     stroke: var(--accent);
@@ -65,25 +64,26 @@ img#artwork {
 }
 
 .controls__primary {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  flex: 1;
+  inline-size: 100%;
+  justify-content: center;
 }
 
 #songs {
-    line-height: 1.5;
+  line-height: 1.5;
 }
 
 .song:hover {
-    background: var(--contrast-2);
+  background: var(--contrast-2);
 }
 
-.song__active button, .song__title:hover {
-    color: var(--accent);
+.song__active button,
+.song__title:hover {
+  color: var(--accent);
 }
 
 input[type="range"] {
-    max-width: 100%;
-    width: 100%;
+  inline-size: 100%;
+  max-inline-size: 100%;
 }
